--- a/Exercicios/ex022-imagens-fundo/fundo06.html
+++ b/Exercicios/ex022-imagens-fundo/fundo06.html
@@ -6,17 +6,26 @@
     <title>Posicionamento</title>
     <style>
         body{
-            height: 98vh;
+            /*height: 98vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*shorthand Background
+            color -> image -> repeat -> [size] -> attachment*/
+
+            background: black url('imagens/wallpaper002.jpg') no-repeat fixed;
+            background-size: cover;
+            
+
         }
         main{
             background-color: white;
             font-family: Arial, Helvetica, sans-serif;
-            width: 400px;
+            max-width: 500px;
             margin: auto;
             border: 2px solid black;
             border-radius: 10px;
@@ -33,8 +42,41 @@
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem eaque adipisci molestias tempora velit fugit officia nostrum saepe, sunt minima eveniet tenetur doloribus nulla numquam, laudantium quidem nemo quaerat cupiditate?
         </p>
+        <h2>Exemplo de Título</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ducimus, provident aliquid neque placeat nam, tempora, suscipit facilis possimus dolor asperiores unde dolorem impedit maiores omnis minus delectus illo laborum.
+        </p>
+        <h3>Exemplo de subtitulo</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ducimus, provident aliquid neque placeat nam, tempora, suscipit facilis possimus dolor asperiores unde dolorem impedit maiores omnis minus delectus illo laborum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ducimus, provident aliquid neque placeat nam, tempora, suscipit facilis possimus dolor asperiores unde dolorem impedit maiores omnis minus delectus illo laborum.
+        </p>
+        <h3>Exemplo de subtitulo</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ducimus, provident aliquid neque placeat nam, tempora, suscipit facilis possimus dolor asperiores unde dolorem impedit maiores omnis minus delectus illo laborum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur ducimus, provident aliquid neque placeat nam, tempora, suscipit facilis possimus dolor asperiores unde dolorem impedit maiores omnis minus delectus illo laborum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis cupiditate inventore dolorum sed, voluptas expedita quibusdam possimus iste incidunt pariatur illo exercitationem unde? Adipisci alias aperiam dolor nisi ipsam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nam ipsa cupiditate. Hic sit in asperiores. Totam, nesciunt. Velit excepturi quo at placeat neque cum veniam quas in sunt rerum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, praesentium optio. Praesentium modi quasi quam pariatur. Sit commodi perferendis vero illum. Odio inventore labore molestiae eaque obcaecati dignissimos laboriosam quia.
+
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis cupiditate inventore dolorum sed, voluptas expedita quibusdam possimus iste incidunt pariatur illo exercitationem unde? Adipisci alias aperiam dolor nisi ipsam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nam ipsa cupiditate. Hic sit in asperiores. Totam, nesciunt. Velit excepturi quo at placeat neque cum veniam quas in sunt rerum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, praesentium optio. Praesentium modi quasi quam pariatur. Sit commodi perferendis vero illum. Odio inventore labore molestiae eaque obcaecati dignissimos laboriosam quia.
+
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis cupiditate inventore dolorum sed, voluptas expedita quibusdam possimus iste incidunt pariatur illo exercitationem unde? Adipisci alias aperiam dolor nisi ipsam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nam ipsa cupiditate. Hic sit in asperiores. Totam, nesciunt. Velit excepturi quo at placeat neque cum veniam quas in sunt rerum.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, praesentium optio. Praesentium modi quasi quam pariatur. Sit commodi perferendis vero illum. Odio inventore labore molestiae eaque obcaecati dignissimos laboriosam quia.
+
         </p>
     </main>    
 </body>
