--- a/Desafios/desafio012-cordel/cordel.html
+++ b/Desafios/desafio012-cordel/cordel.html
@@ -25,7 +25,7 @@
         Vou dizer tudo em poesia. 
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -59,7 +59,7 @@
         </p> 
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -69,7 +69,8 @@
             Era texto de verdade <br>
             Nas linhas do coração.
         </p> 
-       
+    </section>
+    <section class="normal">             
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -78,6 +79,9 @@
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
             Da tecnologia do agora. <br>
+        </p> 
+
+        <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
             Deus escuta todo mundo <br>
@@ -85,7 +89,7 @@
             Dois pontos são dois joelhos <br>
             Seus lábios são aparelhos <br>
             Deixe que Deus interprete.
-        </p> 
+        </p>
     </section>
     <footer>
         <p>
