--- a/Exercicios/ex023-tabelas/tabela002.html
+++ b/Exercicios/ex023-tabelas/tabela002.html
@@ -4,53 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anatomia de Tabelas Grandes</title>
-    <style>
-        body{
-            background-color: black;
-            margin: 20px;
-        }
-
-        main{
-            background-color: white;
-            max-width: 600px;
-            margin: auto;
-            font-family: Arial, Helvetica, sans-serif;
-            border-radius: 20px;
-            padding: 20px;
-        }
-
-        table{
-            width: 95%;
-            border-collapse: collapse;
-            display: block;
-            margin: auto;
-        }
-
-        caption{
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 1.5em;
-            background-color: lightblue;
-            border: 1px solid black;
-        }
-
-        thead, tfoot{
-            background-color: rgb(27, 27, 102);
-            color: white;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-            border: 1px solid black;
-        }
-
-        td{
-            border: 1px solid black;
-            text-align: center;
-            padding: 5px;
-        }
-
-        .state{
-            text-align: left;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -147,16 +101,84 @@
                     <td>7.609.601</td>
                     <td>6.248.436</td>
                 </tr>
+                <tr>
+                    <td>11</td>
+                    <td class="state">Goiás</td>
+                    <td>7.055.228</td>
+                    <td>6.248.436</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td class="state">Maranhão</td>
+                    <td>6.775.152</td>
+                    <td>6.574.789</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td class="state">Paraíba</td>
+                    <td>3.974.495</td>
+                    <td>3.766.528</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td class="state">Amazonas</td>
+                    <td>3.941.175</td>
+                    <td>3.483.985</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td class="state">Espirito Santo</td>
+                    <td>3.833.486</td>
+                    <td>3.514.952</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td class="state">Mato Grosso</td>
+                    <td>3.658.813</td>
+                    <td>3.035.122</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td class="state">Rio Grande do Norte</td>
+                    <td>3.302.406</td>
+                    <td>3.168.027</td>
+                </tr>
+                <tr>
+                    <td>18</td>
+                    <td class="state">Piauí</td>
+                    <td>3.269.200</td>
+                    <td>3.118.360</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td class="state">Alagoas</td>
+                    <td>3.127.511</td>
+                    <td>3.120.494</td>
+                </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <th></th>
-                    <th scope="row">Total de Habitantes</th>
+                    <th scope="col" colspan="2">Total de Habitantes</th>
                     <td>0000</td>
                     <td>0000</td>
                 </tr>
             </tfoot>
         </table>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, totam blanditiis ipsa obcaecati dicta odit sint saepe provident pariatur iste doloremque assumenda atque possimus non eveniet dolorum! Fugit, consequatur doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur perferendis alias similique dicta! Nisi pariatur iure fuga quod ducimus obcaecati soluta sit in adipisci. Debitis repellendus commodi aliquid eligendi fugiat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non autem mollitia nesciunt nostrum deleniti quos quis doloremque impedit, quaerat rem natus, eum facilis sequi consequatur fugiat atque. Repellendus, maxime sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsam quo exercitationem quaerat? Tempora temporibus, porro officiis autem praesentium deserunt perspiciatis cupiditate voluptatem, quae fugiat quo! Quam amet velit vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam quam voluptatum ex animi officia at quo aperiam harum? Porro odit adipisci aperiam mollitia quo officia inventore labore itaque voluptatibus.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, totam blanditiis ipsa obcaecati dicta odit sint saepe provident pariatur iste doloremque assumenda atque possimus non eveniet dolorum! Fugit, consequatur doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur perferendis alias similique dicta! Nisi pariatur iure fuga quod ducimus obcaecati soluta sit in adipisci. Debitis repellendus commodi aliquid eligendi fugiat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non autem mollitia nesciunt nostrum deleniti quos quis doloremque impedit, quaerat rem natus, eum facilis sequi consequatur fugiat atque. Repellendus, maxime sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsam quo exercitationem quaerat? Tempora temporibus, porro officiis autem praesentium deserunt perspiciatis cupiditate voluptatem, quae fugiat quo! Quam amet velit vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam quam voluptatum ex animi officia at quo aperiam harum? Porro odit adipisci aperiam mollitia quo officia inventore labore itaque voluptatibus.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, totam blanditiis ipsa obcaecati dicta odit sint saepe provident pariatur iste doloremque assumenda atque possimus non eveniet dolorum! Fugit, consequatur doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur perferendis alias similique dicta! Nisi pariatur iure fuga quod ducimus obcaecati soluta sit in adipisci. Debitis repellendus commodi aliquid eligendi fugiat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non autem mollitia nesciunt nostrum deleniti quos quis doloremque impedit, quaerat rem natus, eum facilis sequi consequatur fugiat atque. Repellendus, maxime sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsam quo exercitationem quaerat? Tempora temporibus, porro officiis autem praesentium deserunt perspiciatis cupiditate voluptatem, quae fugiat quo! Quam amet velit vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam quam voluptatum ex animi officia at quo aperiam harum? Porro odit adipisci aperiam mollitia quo officia inventore labore itaque voluptatibus.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, totam blanditiis ipsa obcaecati dicta odit sint saepe provident pariatur iste doloremque assumenda atque possimus non eveniet dolorum! Fugit, consequatur doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur perferendis alias similique dicta! Nisi pariatur iure fuga quod ducimus obcaecati soluta sit in adipisci. Debitis repellendus commodi aliquid eligendi fugiat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non autem mollitia nesciunt nostrum deleniti quos quis doloremque impedit, quaerat rem natus, eum facilis sequi consequatur fugiat atque. Repellendus, maxime sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsam quo exercitationem quaerat? Tempora temporibus, porro officiis autem praesentium deserunt perspiciatis cupiditate voluptatem, quae fugiat quo! Quam amet velit vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam quam voluptatum ex animi officia at quo aperiam harum? Porro odit adipisci aperiam mollitia quo officia inventore labore itaque voluptatibus.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, totam blanditiis ipsa obcaecati dicta odit sint saepe provident pariatur iste doloremque assumenda atque possimus non eveniet dolorum! Fugit, consequatur doloremque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur perferendis alias similique dicta! Nisi pariatur iure fuga quod ducimus obcaecati soluta sit in adipisci. Debitis repellendus commodi aliquid eligendi fugiat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non autem mollitia nesciunt nostrum deleniti quos quis doloremque impedit, quaerat rem natus, eum facilis sequi consequatur fugiat atque. Repellendus, maxime sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ipsam quo exercitationem quaerat? Tempora temporibus, porro officiis autem praesentium deserunt perspiciatis cupiditate voluptatem, quae fugiat quo! Quam amet velit vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus magnam quam voluptatum ex animi officia at quo aperiam harum? Porro odit adipisci aperiam mollitia quo officia inventore labore itaque voluptatibus.
+        </p>
     </main>
 </body>
 </html>
