--- a/Desafios/desafio013-tabelas/tabela02.html
+++ b/Desafios/desafio013-tabelas/tabela02.html
@@ -15,7 +15,7 @@
             background-color: white;
             font-family: Arial, Helvetica, sans-serif;
             padding: 20px;
-            width: 800px;
+            max-width: 800px;
             margin: auto;
             border-radius: 5px;
         }
