--- a/Desafios/desafio013-tabelas/tabela03.html
+++ b/Desafios/desafio013-tabelas/tabela03.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com Tabelas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         body{
-            background-color: brown;
             margin-top: 50px;
+            background-image: linear-gradient(to right, rgb(78, 20, 20), rgb(211, 63, 63));
         }
 
         main{
