--- a/Exercicios/ex023-tabelas/tabela004.html
+++ b/Exercicios/ex023-tabelas/tabela004.html
@@ -9,9 +9,14 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        body > h1{
+            text-align: center;
+        }
+
         table{
             width: 500px;
             border-collapse: collapse;
+            margin: auto;
         }
 
         caption{
