--- a/Exercicios/ex023-tabelas/tabela005.html
+++ b/Exercicios/ex023-tabelas/tabela005.html
@@ -156,5 +156,8 @@
             </tbody>
         </table>
     </div>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat corrupti placeat, impedit, in earum blanditiis sunt accusantium illum unde voluptatum dolorem ex soluta debitis pariatur quas cupiditate quam praesentium quae? Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nihil harum nostrum perspiciatis possimus rerum! Consequatur voluptatum, vitae nostrum iste, porro aliquid incidunt architecto rem enim omnis aut dolor molestiae.
+    </p>
 </body>
 </html>
