--- a/Exercicios/ex024-iframe/iframe002.html
+++ b/Exercicios/ex024-iframe/iframe002.html
@@ -28,7 +28,11 @@
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia modi excepturi eveniet, consectetur exercitationem reiciendis omnis, doloremque fuga consequuntur commodi cupiditate praesentium labore. Quod architecto beatae numquam incidunt quia impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid animi esse laborum accusamus. Reiciendis, a exercitationem facere impedit quidem repellendus, sapiente, enim deleniti explicabo suscipit possimus! Earum quam sunt pariatur!
     </p>
-    <iframe src="pagina001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pagina001.html" frameborder="0" height="500" width="500">
+        <p>
+            Seu navegador não é compatível com o conteúdo.
+        </p>
+    </iframe>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum itaque aliquid ut consectetur hic voluptate cum quod mollitia officiis laudantium quia, tempore vel illum voluptatum est possimus facere? Similique, asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eligendi nemo veritatis nulla natus amet officia aspernatur, odit, corrupti numquam, laudantium dolorem id nesciunt voluptates voluptate! Quasi unde est quae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem amet repellat eius molestias nemo quas veritatis non provident laboriosam voluptatibus corrupti, ab quasi a explicabo eaque, in perspiciatis nulla commodi.
     </p>
