--- a/Exercicios/ex024-iframe/iframe003.html
+++ b/Exercicios/ex024-iframe/iframe003.html
@@ -49,7 +49,7 @@
         }
 
         body > ul > li > a:hover {
-            border: 3px solid black;
+            background-color: rgb(207, 55, 55);
         }
     </style>
 </head>
@@ -66,7 +66,7 @@
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia exercitationem obcaecati quas, et totam nesciunt. Qui et non rem, porro ipsam quidem fugit, eaque deleniti earum error libero facilis? Voluptas! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam temporibus ex est eaque, inventore quidem modi, deserunt in ab assumenda earum error quis eveniet porro quaerat repellat? Esse, aliquam quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. At explicabo exercitationem ipsam beatae eligendi, dignissimos quidem? Doloremque pariatur atque quas saepe quidem quae aperiam a deleniti, excepturi hic dolor officia?
     </p>
-    <iframe src="" id="tela" name="frame">
+    <iframe src="paginas-extras/pagina000.html" id="tela" name="frame">
         <p>Seu navegador não é compatível com o conteúdo.</p>
     </iframe>
     <p>
