--- a/Exercicios/ex025-forms/form001.html
+++ b/Exercicios/ex025-forms/form001.html
@@ -13,10 +13,21 @@
 
         body {
             padding: 20px;
+            background-color: black;
+        }
+
+        main {
+            background-color: white;
+            width: 80vw;
+            height: 500px;
+            margin: auto;
+            padding: 15px;
         }
 
         h1 {
             margin-bottom: 30px;
+            background-color: lightblue;
+            text-align: center;
         }
 
         p {
@@ -25,17 +36,19 @@
     </style>
 </head>
 <body>
-    <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php" autocomplete="off">
-        <p>
-            <label for="inome">Nome</label>: <input type="text" nome="nome" id="inome">
-        </p>
-        <p>
-            <label for="isobrenome">Sobrenome</label>: <input type="text" nome="sobrenome" id="isobrenome">
-        </p>
-        <p>
-            <input type="submit" value="Enviar">
-        </p>
-    </form>
+    <main>
+        <h1>Meu primeiro formulário</h1>
+        <form action="cadastro.php" method="post" autocomplete="off">
+            <p>
+                <label for="inome">Nome</label>: <input type="text" nome="nome" id="inome">
+            </p>
+            <p>
+                <label for="isobrenome">Sobrenome</label>: <input type="text" nome="sobrenome" id="isobrenome">
+            </p>
+            <p>
+                <input type="submit" value="Enviar">
+            </p>
+        </form>
+    </main>
 </body>
 </html>
